unpackaged/main/default/objects/ErrorLog__c/fields/FileName__c.field-meta.xml
<CustomField>
    <fullName>FileName__c</fullName>
    <label>FileName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>