unpackaged/main/default/objects/ErrorLog__c/fields/Line__c.field-meta.xml
<CustomField>
    <fullName>Line__c</fullName>
    <description>Its used to store Error Log LineNumber</description>
    <label>LineNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>