unpackaged/main/default/objects/ErrorLog__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Its used to store Error Log Message</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>