unpackaged/main/default/objects/ErrorLog__c/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <description>Its used to store Error Log Source System</description>
    <label>SourceSystem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>