unpackaged/main/default/objects/ErrorLog__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>Its used to store Error Log StackTrace</description>
    <label>StackTrace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>