unpackaged/main/default/objects/ErrorLog__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Its used to store Error Log Type</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>